--- a/cnn.tex
+++ b/cnn.tex
@@ -32,13 +32,13 @@ In figure \ref{fig:convolution} you can see how an edge detection filter is used
 \begin{figure}[h!]
 \centering
 \includegraphics[width=.9\linewidth]{figs/facialDetection.png}
-\caption{Pictorial Representation of Convolutional Neural Networks as well as a visual representation on CNN's complexity of layer feature extraction}
+\caption{Pictoral representation of Convolutional Neural Networks as well as a visual representation on CNN's complexity of layer feature extraction}
 \label{fig:featuremaps}
 \end{figure}
-There are other layers in a CNN architecture that will not be covered in the scope of this thesis but in a general sense, these layers are interspersed between convolution layers to preserve dimensionality and control overfitting of the network. The last layer is called a fully connected layer and it's job is to output an N dimensional vector where N is the number of classes the network has been trained on. Each number in this vector represents the probability that the input image is a certain class. Fully connected layers use the feature maps of the high level features to compute the products between the weights of the previous layer to get the probabilites of each class. These weights are then adjusted throught the training process using backpropagation. 
+There are other layers in a CNN architecture that will not be covered in the scope of this thesis but in a general sense, these layers are interspersed between convolution layers to preserve dimensionality and control overfitting of the network. The last layer is called a fully connected layer and its job is to output an N dimensional vector where N is the number of classes the network has been trained on. Each number in this vector represents the probability that the input image is a certain class. Fully connected layers use the feature maps of the high level features to compute the products between the weights of the previous layer to get the probabilites of each class. These weights are then adjusted throught the training process using backpropagation. 
 
 \subsection{Backpropagation}
-A CNN at it's onset has weights that are randomized. The filters themselves don't know how to pull out identifying information per class. For a neural network to learn, it must be trained on a training set that is labeled. Backpropagation has four seperate steps: foward pass, loss function, backward pass and updating weights. In the forward pass, a training image is passed through the whole network. All of our weights at this time are randomly initialized so the output for the first image will have no preference to a specific class. A common loss function is mean squared error (MSE): 
+A CNN at its onset has weights that are randomized. The filters themselves don't know how to pull out identifying information per class. For a neural network to learn, it must be trained on a training set that is labeled. Backpropagation has four seperate steps: foward pass, loss function, backward pass and updating weights. In the forward pass, a training image is passed through the whole network. All of our weights at this time are randomly initialized so the output for the first image will have no preference to a specific class. A common loss function is mean squared error (MSE): 
 \begin{equation}
 E_{total} = \mathlarger{\mathlarger{\sum}}\frac{1}{2}(actual class -predicted class)^2 
 \end{equation}
@@ -56,7 +56,7 @@ The learning rate is a parameter given to the CNN and it describes the steps the
 Going through backpropagation consists of one training iteration. Once the network completes a specific number of iterations, another parameter given, and runs over all training images that are split up into batches, the process is considered complete. User input parameters, called hyperparameters, help the network converge to optimal weights for each layer. Batch size, learning rate, and training iteration are just some of the user input hyperparameters that help. Lastly, to check if the network has learned, a different set of labeled images are fed to the CNN iteravely through the training process to see how well it's learning. This process is especially important to make sure the network architecture isn't being affected by overfitting (memorizing training input rather than learning). 
 
 \section{Choosing Hyperparameters}
-Convolutional neural networks are a relatively new tools in computer vision. Choosing hyperparameters for your specific dataset is a non-trivial task. Hyperparameters can range from the amount of layers and filters per layer in an CNN architecture to the stride the receptive field of a filter takes, not to mention training hyperparameters such as learning rate and batch size described above. They're ways to optimize these hyperparameters via hyperparameter optimization using Bayesian Optimization \cite{optimization} but as you can imagine, optimizing an CNN architecture from scratch can be very computationally intensive. For the purpose of this thesis, two well known CNN architectures were used, AlexNet \cite{alexnet}, which won the ImageNet Large-Scale Visual Recognition Challenge (ILSVRC) in 2012 and therefore bringing awareness of CNNs, and GoogleNet \cite{googlenet}, which won the ILSVRC in 2014, giving rise to deep networks. Both AlexNet and GoogleNet architectures were used to train on LArTPC images and their low level filter weights. Higher level filter weights were randomly initialized before training so the network can learn high level features of LArTPC image classes. The AlexNet architecture is shown in figure \ref{fig:alexnet} and the GoogleNet architecture is shown in figure \ref{fig:googlenet}
+Convolutional neural networks are a relatively new tools in computer vision. Choosing hyperparameters for your specific dataset is a non-trivial task. Hyperparameters can range from the amount of layers and filters per layer in an CNN architecture to the stride the receptive field of a filter takes, not to mention training hyperparameters such as learning rate and batch size described above. There are ways to optimize these hyperparameters via hyperparameter optimization using Bayesian Optimization \cite{optimization} but as you can imagine, optimizing an CNN architecture from scratch can be very computationally intensive. For the purpose of this thesis, two well known CNN architectures were used, AlexNet \cite{alexnet}, which won the ImageNet Large-Scale Visual Recognition Challenge (ILSVRC) in 2012 and therefore bringing awareness of CNNs, and GoogleNet \cite{googlenet}, which won the ILSVRC in 2014, giving rise to deep networks. Both AlexNet and GoogleNet architectures were used to train on LArTPC images and their low level filter weights. Higher level filter weights were randomly initialized before training so the network can learn high level features of LArTPC image classes. The AlexNet architecture is shown in figure \ref{fig:alexnet} and the GoogleNet architecture is shown in figure \ref{fig:googlenet}
 
 \begin{figure}[htp!]
 \centering
